# iconv-native-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: run-tests.yaml
docs/: README.md  convert.md  convert_lossy.md  decode.md  decode_lossy.md
examples/: convert_str.rs  decode_str.rs  mini_iconv.rs
src/: bom.rs  encoding.rs  error.rs  lib.rs  sys.rs  utf.rs  wide.rs
src/sys/: iconv.rs  wasm.rs  win.rs
src/sys/iconv/: ffi.rs
src/sys/wasm/: convert.rs  ffi.rs  utf16.rs  utf32.rs
src/sys/win/: codepage.rs  utf16.rs  utf32.rs  wide.rs
src/utf/: decode.rs  decode_lossy.rs
tests/: convert.rs  decode.rs  strings.rs  wasm.rs
tests/harness/: mod.rs
