[package]
name = "iconv-native"
description = "A lightweight text encoding converter based on platform native API or libiconv"
version = "0.1.0-alpha.1"
authors = ["bdbai <bdbaiapp@163.com>"]
categories = ["text-processing", "encoding", "internationalization"]
keywords = ["encoding", "unicode", "charset", "iconv"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[features]
default = ["win32"]
win32 = ["widestring", "windows-sys"]
wasm_nonstandard_allow_legacy_encoding = []

[dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Globalization",
] }
widestring = { version = "1", optional = true, features = [
    "alloc",
], default-features = false }
