[package]
name = "iconv-native"
description = "A lightweight text encoding converter based on platform native API or libiconv"
version = "0.1.0-alpha.1"
authors = ["bdbai <bdbaiapp@163.com>"]
categories = ["text-processing", "encoding", "internationalization"]
keywords = ["encoding", "unicode", "wasm", "iconv"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[features]
default = ["win32", "web-encoding", "libc-iconv", "fallback-libiconv"]
win32 = ["widestring", "windows-sys"]
web-encoding = ["widestring", "web-sys"]
wasm-nonstandard-allow-legacy-encoding = []
libc-iconv = []
libiconv = []
fallback-libiconv = []

[dependencies]
cfg-if = "1"
widestring = { version = "1", optional = true, features = [
    "alloc",
], default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Globalization",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", optional = true, features = [
    "TextEncoder",
    "TextDecoder",
    "TextDecoderOptions",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
lexopt = "0.3"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"
